--- a/angular/projects/admin-nrpti/src/app/mines/mines-records-add-edit/mines-records-add-edit.component.html
+++ b/angular/projects/admin-nrpti/src/app/mines/mines-records-add-edit/mines-records-add-edit.component.html
@@ -120,6 +120,7 @@
         [documents]="record ? record.documents : []"
         (documentsToDelete)="documentsToDelete = $event"></app-document-edit>
       <app-document-link-staging
+        [maxFiles]=1
         (linksChanged)="links = $event"
         (documentsChanged)="documents = $event"></app-document-link-staging>
     </section>
