update record population and picklist to fix flavour record creation

--- a/angular/projects/admin-nrpti/src/app/mines/mines-records-add-edit/mines-records-add-edit.component.html
+++ b/angular/projects/admin-nrpti/src/app/mines/mines-records-add-edit/mines-records-add-edit.component.html
@@ -98,7 +98,7 @@
         <div class="label-pair">
           <label for="recordType">Record Type</label>
           <select name="recordType" id="recordType" formControlName="recordType" class="form-control">
-            <option *ngFor="let recordType of recordTypes" [ngValue]="recordType">
+            <option *ngFor="let recordType of recordTypeNamesBCMI" [ngValue]="recordType">
               {{ recordType }}
             </option>
           </select>
